src/objects/Review__c.object
<CustomObject>
    <fields>
        <fullName>Aplication_Id__c</fullName>
        <label>Aplication Id</label>
        <referenceTo>Job_Application__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description_Review__c</fullName>
        <label>Description Review</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Review__c</fullName>
        <label>Name Review</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Type__c</fullName>
        <label>Review Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agreed</fullName>
                </value>
                <value>
                    <fullName>No Agreed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Review__c</fullName>
        <label>Time Review</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Review</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Application_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>Application__c  &lt; 0 || Application__c  &gt;10</errorConditionFormula>
        <errorMessage>Error Application must be in diapason 0-10</errorMessage>
    </validationRules>
</CustomObject>